# 3DViewer_v1.0

./: README.md
materials/: from_developers_rus.txt
src/: CMakeLists.txt  LICENSE  Makefile  ini.txt  main.c  nohup.out  readme.html
src/include/: project.h  terminal.h
src/libs/raygui-36/: CMakeLists.txt
src/libs/raygui-36/src/: gui_file_dialog.h
src/src/: 3dmath.c  explorer.c  parser.c  screen.c  source_loader.c  ui.c  utils.c
src/tests/: main.c  test.c  test.h
